web config: improve sizing of plugin templates

--- a/bliss/config/conductor/web/configuration/css/beacon.css
+++ b/bliss/config/conductor/web/configuration/css/beacon.css
@@ -41,9 +41,14 @@
     padding: 4px;
 }
 
-.beacon-tree {
+.beacon-navigation .beacon-tree {
     overflow-y: auto;
     height: 100%;
+}
+
+#session_form .beacon-tree {
+    overflow-y: auto;
+    height: calc(100% - 270px);
 }
 
 .beacon-tree ul.list-group {
