--- a/bliss/flint/resources/gui/scan-status.ui
+++ b/bliss/flint/resources/gui/scan-status.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>312</width>
-    <height>88</height>
+    <height>104</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,23 +56,23 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="noAcquisition">
-     <property name="text">
-      <string>TextLabel</string>
+    <widget class="QProgressBar" name="childProcess">
+     <property name="value">
+      <number>24</number>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
+     <property name="textVisible">
+      <bool>false</bool>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="invertedAppearance">
+      <bool>false</bool>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="remainingTime">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
+    <widget class="QLabel" name="noAcquisition">
      <property name="text">
       <string>TextLabel</string>
      </property>
